fix(training): various fixes
