# openapi/openapi.yaml
@@ -53,7 +53,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Pet"
+              $ref: "#/components/schemas/NewPet"
   /pet/findByCategories:
     get:
       tags:
@@ -96,14 +96,11 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: int
       responses:
         "200":
           description: successful operation
           content:
-            application/xml:
-              schema:
-                $ref: "#/components/schemas/Pet"
             application/json:
               schema:
                 $ref: "#/components/schemas/Pet"
@@ -111,40 +108,6 @@ paths:
           description: Invalid ID supplied
         "404":
           description: Pet not found
-    put:
-      tags:
-        - pet
-      summary: Update an existing pet
-      description: Update an existing pet by Id
-      operationId: updatePet
-      parameters:
-        - name: petId
-          in: path
-          description: ID of pet to return
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Pet"
-        "400":
-          description: Invalid ID supplied
-        "404":
-          description: Pet not found
-        "405":
-          description: Validation exception
-      requestBody:
-        description: Update an existent pet in the store
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Pet"
     delete:
       tags:
         - pet
@@ -158,21 +121,60 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: int
       responses:
         "400":
           description: Invalid pet value
+  "/pet/{petId}/rename":
+    post:
+      tags:
+        - pet
+      summary: Rename a pet
+      description: Rename a single pet
+      operationId: renamePetById
+      parameters:
+        - name: petId
+          in: path
+          description: ID of pet to rename
+          required: true
+          schema:
+            type: integer
+            format: int
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
+        "400":
+          description: Invalid name supplied
+        "404":
+          description: Pet not found
+      requestBody:
+        description: Update an existent pet in the store
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+              required:
+                - name
 components:
   schemas:
     Pet:
       x-swagger-router-model: io.swagger.petstore.model.Pet
       required:
+        - id
         - name
         - category
       properties:
         id:
           type: integer
-          format: int64
+          format: int
           example: 1
         name:
           type: string
@@ -181,20 +183,16 @@ components:
           type: string
           example: Dog
       type: object
-    ApiResponse:
+    NewPet:
+      x-swagger-router-model: io.swagger.petstore.model.NewPet
+      required:
+        - name
+        - category
       properties:
-        code:
-          type: integer
-          format: int32
-        type:
+        name:
           type: string
-        message:
+          example: Rafale
+        category:
           type: string
+          example: Dog
       type: object
-  requestBodies:
-    Pet:
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/Pet"
-      description: Pet object that needs to be added to the shelter
